Fixed issue with expanding body on safari

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body{
     display: inline-flex;
 }
 .language__buttons {
-    padding-left: 115px;
+    padding-left: 110px;
 }
 .person__avatar{
     margin-right: 32px;
